--- a/DemoStrideEngineAvatar.Linux/DemoStrideEngineAvatar.Linux.csproj
+++ b/DemoStrideEngineAvatar.Linux/DemoStrideEngineAvatar.Linux.csproj
@@ -6,6 +6,7 @@
     <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
     <OutputType>WinExe</OutputType>
     <RootNamespace>DemoStrideEngineAvatar</RootNamespace>
+    <StrideGraphicsApi>Vulkan</StrideGraphicsApi>
 
     <OutputPath>..\Bin\Linux\$(Configuration)\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
