--- a/DemoStrideEngineAvatar.Windows/DemoStrideEngineAvatar.Windows.csproj
+++ b/DemoStrideEngineAvatar.Windows/DemoStrideEngineAvatar.Windows.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
     <OutputType>WinExe</OutputType>
     <RootNamespace>DemoStrideEngineAvatar</RootNamespace>
+    <StrideGraphicsApi>Direct3D12</StrideGraphicsApi>
 
     <OutputPath>..\Bin\Windows\$(Configuration)\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
